:wrench: change url configuration

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ subtitle: Portfolio Website
 email: coroo.wicaksono@gmail.com
 description: Building Insurtech in Indonesia | Partnership Project Engineer |<br/> PT. Asuransi Jiwa Sequis Life | University of Indonesia
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "coroo.github.io" # the base hostname & protocol for your site
+url: "" # the base hostname & protocol for your site
 author:
 city: Tangerang Selatan
 state: Banten
