:hammer: update docs

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Kuncoro Wicaksono
 subtitle: Portfolio Website
 email: coroo.wicaksono@gmail.com
-description: Building Insurtech in Indonesia | Partnership Project Engineer |<br/> PT. Asuransi Jiwa Sequis Life | University of Indonesia
+description: Building Insurtech in Indonesia | Engineering Manager |<br/> PT. Asuransi Jiwa Sequis Life | University of Indonesia
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 author:
